Set code compatibility back to Java 8
Java 10 still requires too many workarounds without full modularization of the code